--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -110,7 +110,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>18 Июля</span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -160,12 +160,12 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета ДО <strong>7 июня* :</strong><u>400 грн.</u> - от 6 до 200 лет, <u>390 грн.</u> 5 - 10 лет, до 
+                                Цена билета ДО <strong>19 июля* :</strong><u>390 грн.</u> - от 6 до 200 лет, <u>375 грн.</u> 5 - 10 лет, до 
                                 4х бесплатно (без предоставления отдельного места в транспорте). 
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                С <strong>8 июня </strong><u>430 грн.</u> - взрослые, <u>410 грн.</u> - дети.
+                                С <strong>19 июля </strong><u>400 грн.</u> - взрослые, <u>390 грн.</u> - дети.
                             </span>
                         </div>
                         <!-- //Alert info -->
@@ -173,7 +173,7 @@
                         
                         <ul class="listing">
                             <!-- Цена и Дата -->
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 430 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 400 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <!-- //Цена и Дата -->
                         </ul>
