--- a/page-Beer.html
+++ b/page-Beer.html
@@ -102,7 +102,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Июня</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 17 Июля</span>
                                 </li>
                             </ul>
                         </div>
@@ -197,15 +197,15 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>16:45</b> - сбор группы и после минутки
+                                            <b>14:45</b> - сбор группы и после минутки
                                             позитива пешая прогулка до места начала
                                             экскурсии!
                                         </p>
-                                        <p><b>17:00 - 17:40</b> - экскурсия
+                                        <p><b>15:00 - 15:40</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>17:40 - 18:30</b> дегустация 6 видов
+                                        <p><b>15:40 - 16:30</b> дегустация 6 видов
                                             вкуснейшего натурального пива. Сваренного
                                             на уже полюбившейся пивоварне: травяное,
                                             пшеничное, облепихово-медовое, синяя
