--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Мая</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>17 Июля</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -324,7 +324,7 @@
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
                             <img src="images/Cheese-Farm/home-of-the-cheese-farm.jpg" alt="Cheese-farm" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>430грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -335,7 +335,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>18 Июля</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -359,7 +359,7 @@
                         </h5>
                         <p class="">Дегустация вин на розовом озере </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Июня </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
