--- a/packages.html
+++ b/packages.html
@@ -144,7 +144,7 @@
                             Экскурсия и дегустация в частной пивоварне
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>12 Июня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>17 Июля</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -168,7 +168,7 @@
                         </h5>
                         <p class="">Дегустация вин на розовом озере </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 19 - 20 Июня </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Августа </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
