--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -107,7 +107,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">19 - 20
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel">23 - 24 Июля
                                         Июня 2021 Года</span>
                                 </li>
                             </ul>
