--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         </h5>
                         <p class="">Дегустация вин на розовом озере </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Июня </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 23 - 24 Июля </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
