--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -114,7 +114,7 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>21 Июня</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>07 Августа</span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
@@ -274,20 +274,20 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 					    
-                                        <p><strong>10:30  </strong>
+                                        <p><strong>09:20  </strong>
                                             Выезд с центра Запорожья после минутки позитива. 
 					    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                             Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!
                                         </p>
 					    
-                                        <p><strong>11:15-12:30 </strong>
+                                        <p><strong>10:00-13:00 </strong>
                                             Черные, белые, шоколадного цвета, большие жеребцы , маленькие понни и не только...
 					    Каких лошадок любите ВЫ? Покататься на этих красавчиках или послушать экскурсию 
 					    о лошадках, а может и то и другое! Хватит времени на все! 
 					    Даже немного полюбоваться видами Каховского водохранилища. 
                                         </p>
 
-                                        <p><strong>13:40-15:30 </strong>
+                                        <p><strong>13:40-15:40 </strong>
                                             Мы в Центре Пылышенко, слушаем удивительную историю создания 
 					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
 					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
@@ -298,7 +298,7 @@
 					    животных, ведь с каждым днем зоопарк растет и развивается! 
 					    Оставляем денежку от Нас на питание животным и продолжаем свой путь.
                                         </p>
-                                        <p><strong>16:30 </strong>
+                                        <p><strong>16:40 </strong>
                                            Мы уже в Запорожье, довольные 
 						<img src="/images/Emoji/1f607.png" alt="smile" height="20px">
 					   возвращаемся домой чтоб поделится впечатлениями 
