--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             Экскурсия львы и лошади...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 21 Июня 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа 2021 Года </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
