--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -127,7 +127,7 @@
                         <p class="txt-alg-jf">
                            Самое потрясающее красивое место Украины - остров Джарылгач
                           с белоснежным песком и красивейшими пляжами. 
-                          Первозданная чистота и красота острова, почувствуй себя Робинзоном<img src="https://github.com/Dmitriy-1986/Travell-tours-site/blob/master/images/Dzharylgach/Dzharylgach.txt" alt="" height="20px">
+                          Первозданная чистота и красота острова, почувствуй себя Робинзоном<img src="images/Dzharylgach/robinzone.jpg" alt="" height="20px">
                           Морские путешествия с прогулками на катерах каждый день! Этот отдых для тебя! 
                         </p>
                          <div id="MoreDetails" style="display: none;">
