--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -276,17 +276,17 @@
 					    Украинские Мальдивы-остров Джарылгач. Потрясающее место
 					    с восхитительными пляжами. Белый песок и бирюзовая вода, 
 					    там хочется остаться навсегда. Обедаем вкуснейшей ухой со ската 
-						<i>(доп.расход - 100 грн. - 450 г. порция)</i> или борщ - <i>(доп.расход 60 грн.)</i>.
+						<i>(доп.расход - 100 грн. - 450 г. порция)</i> или борщ - <i>(доп.расход - 60 грн.)</i>.
 					    Купаемся и загораем, получаем полный кайфффф от отдыха. 
 					    Делаем потрясающие фото и видео.
-					    Ужинаем там-же (доп.расход: гречка с мясом -70грн, макароны с котлеткой – 60грн. )
+					    Ужинаем там-же <i>(доп.расход: гречка с мясом - 70 грн., макароны с котлеткой – 60 грн.)</i>
 					    Кайфуем весь оставшийся день и ночь. 
                                         </p>   
  
  					<hr>
                                         <h5>25 июля</h5>
                                         <p><strong>08:00-8:30 </strong>
-                                           Вкусненько завтракаем <i>(доп.расход: плов -80 грн., жаркое - 80 грн.)</i>, собираемся в морское путешествие по маякам!
+                                           Вкусненько завтракаем <i>(доп.расход: плов - 80 грн., жаркое - 80 грн.)</i>, собираемся в морское путешествие по маякам!
 						<img src="/images/Emoji/1f642.png" alt="" height="20px">
                                         </p>    
                                         <p><strong>09:00 - 12:00 </strong>
@@ -297,9 +297,9 @@
 					    нам расскажет потрясающий местный экскурсовод. Море эмоциий и впечатлений. 
                                         </p>
 					<p><strong>12:00 - 13:00 </strong>
-                                            Время пообедать (доп.расход: ) и собраться в дорогу. 
-					    Обедаем вкуснейшей ухой со ската (доп.расход -100грн -450 г порция)
-					    или борщ -(доп.расход 60 грн). Выселяемся и отправляемся на катере в Скадовск. 
+                                            Время пообедать <i>(доп.расход: )</i> и собраться в дорогу. 
+					    Обедаем вкуснейшей ухой со ската <i>(доп.расход - 100 грн. - 450 г. порция)</i>
+					    или борщ - <i>(доп.расход 60 грн.)</i>. Выселяемся и отправляемся на катере в Скадовск. 
 					    Время возвращаться домой.
                                         </p>
 					<p><strong>20:00 - 21:00 </strong>
