--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -152,7 +152,7 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена: <u>2300 грн.</u> при бронировании с  <strong>24 - 26 ИЮНЯ</strong>!
+                                Цена: <u>2300 грн.</u> при бронировании с  <strong>24 - 26 июня</strong>!
                             </span>
 			   <hr>
                             <span class="txt-alg-jf">
