--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -171,7 +171,7 @@
                             </span>
 		            <hr>
                             <span class="txt-alg-jf">
-                                Цена: <u>2500 грн.</u> при бронировании с  <strong>18 июля (если будут места)</strong>,
+                                Цена: <u>2500 грн.</u> при бронировании с  <strong>18 июля <i>(если будут места)</i></strong>,
                                  <u>2460 грн.</u> дети 6-12 лет!
                             </span> 
                             <hr>
