--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -400,12 +400,12 @@
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item list-group-item-success">
+                                <li class="list-group-item list-group-item-success"> 
                                   Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; <br>
                                   (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Сырной ферме;
+                                    транспорт тур.класса с раскладными сиденьями, ТВ; 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                    дегустация 7 видов сыра, молоко, йогурт;
