--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -408,19 +408,23 @@
                                     транспорт тур.класса с раскладными сиденьями, ТВ; 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   дегустация 7 видов сыра, молоко, йогурт;
+                                   Забираем Металлургов - Фестивальная - Советская - Авто и Ж/Д вокзалы. 
+				   Заберем Вас в Васильевке и по трассе с любого села по дороге на море! 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Пасеке;
+                                    1 НОЧЬ НА Острове Джарылгач 1 линия от моря, 
+				    живем на пляже домики 3-4м, альтанки 2м
+			            (палатка в полный рос с поролоновым матрасом) удобства на территории: биотуалет, душ, умывальник;  
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 4 вида меда;
+                                   Морская экскурсия на мяки с купанием. Мега крутые эмоции;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    сопровождение представителя нашей компании;
+				   Посещение заповедника Олешковские пески с возможностью сделать фото «Я в Сахаре»;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота, самое замечательное настроение.
+                                    Супер позитивное сопровождение представителя нашей компании,
+				    сувенир-магнит от Нового Поворота, СУПЕР КРУТОЙ ОТДЫХ ПОЛНЫЙ РЕЛАКС И УДОВОЛЬСТВИЕ! 
                                 </li>
                             </ul>
                         </div>
@@ -429,8 +433,14 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта.
+                                    Мы подскажем где покушать, но оплатить прийдеться Вам <img src="/images/Emoji/1f609.png" alt="smile" height="20px"> 
                                 </li>
+				<li class="list-group-item list-group-item-danger ">
+                                    Аренда Шезлонги - 50 грн. на день, деревянные лежаки;
+                                </li>
+				<li class="list-group-item list-group-item-danger ">
+                                   Проезд до места выезда группы и обратно.
+                                </li>     
                             </ul>
                         </div>
                     <!-- owl-carousel -->
