--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -262,7 +262,7 @@
 					    
 					<h5>24 июля</h5>
                                         <p><strong>06:30 </strong>
-                                           Выезд из Центра Запорожья после минутки позитива.
+						Выезд из Центра <span id="Zaporozhye">Запорожья</span> после минутки позитива.
 					   Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV 
 					 <img src="images/Emoji/tv.png" alt="" height="20px">
 					Заберем Вас Металлургов-Фестивальная-Авто и жд вокзалы 
@@ -290,7 +290,7 @@
  					<hr>
                                         <h5>25 июля</h5>
                                         <p><strong>08:00-8:30 </strong>
-                                           Вкусненько завтракаем <i>(доп.расход: плов - 80 грн., жаркое - 80 грн.)</i>, собираемся в морское путешествие по маякам!
+                                           Вкусненько завтракаем <i>(доп.расход: плов - 80 грн., жаркое - 80 грн.)</i>, собираемся в <span id="cruise">морское путешествие</span> по маякам!
 						<img src="/images/Emoji/1f642.png" alt="" height="20px">
                                         </p>    
                                         <p><strong>09:00 - 12:00 </strong>
@@ -494,8 +494,8 @@
                                 Запорожье</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('travels')" class="text-white"
-                                title="Путешествия" href="#travels" rel="tag">Путешествия
+                                onclick="selectText('cruise')" class="text-white"
+                                title="Mорское путешествие" href="#cruise" rel="tag">Mорское путешествие
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
