--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -127,8 +127,8 @@
                         <p class="txt-alg-jf">
                            Самое потрясающее красивое место Украины - остров Джарылгач
                           с белоснежным песком и красивейшими пляжами. 
-                          Первозданная чистота и красота острова, почувствуй себя Робинзоном
-                          Морские путешествия с прогулками на катерах каждый день! Этот отдых для тебя! 
+                          Первозданная чистота и красота острова, почувствуй себя Робинзоном.
+                          Морские путешествия с прогулками на катерах каждый день! Этот <span id="tourism">туризм</span> - отдых для тебя! 
                         </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 bg-warning text-white txt-alg-jf">
