--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -272,7 +272,7 @@
                                         </p>
                                         <p><strong>12:30-50 </strong>
                                             Мы в настоящей Сахаре.
-					    Золотистые барханы, потрясающий песок. 
+						<span id="goldenDunes">Золотистые барханы</span>, потрясающий песок. 
 					    Делаем супер крутые фото в Олешковских песках и едем дальше на остров. 
                                         </p>
 					<p><strong>14:00  </strong>
@@ -510,8 +510,8 @@
                                 class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Олешковская пустыня
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
-                                class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Медовая экскурсия
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
+                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Золотистые барханы
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
