--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -126,7 +126,7 @@
                         </p>
                         <p class="txt-alg-jf">
                            Самое потрясающее красивое место Украины - остров Джарылгач
-                          с белоснежным песком и красивейшими пляжами. 
+                          с белоснежным песком и <span id="beautifulBeaches">красивейшими пляжами</span>. 
                           Первозданная чистота и красота острова, почувствуй себя Робинзоном.
                           Морские путешествия с прогулками на катерах каждый день! Этот <span id="tourism">туризм</span> - отдых для тебя! 
                         </p>
@@ -296,7 +296,7 @@
                                         <p><strong>09:00 - 12:00 </strong>
                                             Сокровища островов и потрясающие маяки!
 					    Морская экскурсия с купанием. Мы узнаем историю Украинских
-					    Мальдив и его загадочных маяков. Любовь, страсти, 
+						Мальдив и его <span id="mysteriousLighthouses">загадочных маяков</span>. Любовь, страсти, 
 					    удивительные приключения и романтические истории все это 
 					    нам расскажет потрясающий местный экскурсовод. Море эмоциий и впечатлений. 
                                         </p>
@@ -514,12 +514,12 @@
                                 class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Золотистые барханы
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
-                                class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Дегустация сыра
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('beautifulBeaches')"
+                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Красивейшие пляжи
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
-                                class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Дегустация меда
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('mysteriousLighthouses')"
+                                class="text-white" title="Загадочные маяки" href="#mysteriousLighthouses" rel="tag">Загадочные маяки
 			</a></span>
 
                     </div>
