--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -611,7 +611,7 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Походы По Грузии</a></li>
                             </ul>
                         </div>
-                    </div><!--
+                    </div>
                    
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
