--- a/page-wine.html
+++ b/page-wine.html
@@ -305,7 +305,7 @@
                         <div class="row">
                             <ul class="col links">
                                 <!-- Места для путешествий-->
-                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-Dzharylgach.html" class="scroll">Джарылгач - Украинские Мальдивы</a></li>
 				<li><a href="https://novipovorot.pp.ua/page-lions-and-horses.html" class="scroll">Львята И Лошадки</a></li>
 				<li><a href="https://novipovorot.pp.ua/page-Pink-Lake.html" class="scroll">Розовое Oзеро</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
