--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -414,7 +414,7 @@
                                 <li class="list-group-item list-group-item-success ">
                                     1 НОЧЬ НА Острове Джарылгач 1 линия от моря, 
 				    живем на пляже домики 3-4м, альтанки 2м
-			            (палатка в полный рос с поролоновым матрасом) удобства на территории: биотуалет, душ, умывальник;  
+			            (палатка в полный рос с поролоновым матрасом) удобства на территории: bio-туалет, душ, умывальник;  
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                    Морская экскурсия на мяки с купанием. Мега крутые эмоции;
@@ -436,7 +436,7 @@
                                     Мы подскажем где покушать, но оплатить прийдеться Вам <img src="/images/Emoji/1f609.png" alt="smile" height="20px"> 
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
-                                    Аренда Шезлонги - 50 грн. на день, деревянные лежаки;
+                                    Аренда Шезлонги - 50 грн. на день;
                                 </li>
 				<li class="list-group-item list-group-item-danger ">
                                    Проезд до места выезда группы и обратно.
