--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -95,6 +95,32 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
 		    
+		 <!--  Стамбул -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Stambul.html">
+                            <img src="images/Stambul-mini.jpg" alt="Stambul" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Stambul.html">
+                                Стамбул
+                            </a>
+                        </h5>
+                        <p class="">
+                            Фестиваль тюльпанов и экскурсия в Стамбуле...
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Стамбул  -->   
+		    
 		<!--  Зоопарк Пылышенко -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
