--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -117,7 +117,7 @@
                         </div>
                         
                         <h4 class="mb-3">
-			    ДЖАРЫЛГАЧ - УКРАИНСКИЕ МАЛЬДИВЫ. СКРОВИЩА ОСТРОВОВ И МАЯКИ. <span id="OleshkovskyDesert">БЕСКРАЙНЯЯ ОЛЕШКОВСКАЯ ПУСТЫНЯ</span>. 
+			    ДЖАРЫЛГАЧ - УКРАИНСКИЕ МАЛЬДИВЫ. СОКРОВИЩА ОСТРОВОВ И МАЯКИ. <span id="OleshkovskyDesert">БЕСКРАЙНЯЯ ОЛЕШКОВСКАЯ ПУСТЫНЯ</span>. 
                         </h4>
                         
                        <p class="txt-alg-jf">
