--- a/packages.html
+++ b/packages.html
@@ -191,11 +191,11 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
-                                Джарылгач - Украинские Мальдивы
+                                Джарылгач
                             </a>
                         </h5>
                         <p class="">
-                            Сокровища островов...
+                            Джарылгач - Украинские Мальдивы
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля 2021 Года </span></li>
