--- a/index.html
+++ b/index.html
@@ -292,31 +292,32 @@
             </p>
             <div class="row">
                 
-                <!--  Пиво -->
+                <!--  Джарылгач - Украинские Мальдивы  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-mini.jpg" alt="Beer" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
+                            <img src="images/Dzharylgach/home-Dzharylgach.jpg" alt="baloon-fast"
+                                class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>2500грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Херсонская обл.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Beer.html">
-                                Натуральное пиво
+                            <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
+                                Джарылгач
                             </a>
                         </h5>
                         <p class="">
-                            Экскурсия и дегустация в частной пивоварне
+                            Джарылгач - Украинские Мальдивы
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>17 Июля</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля 2021 Года </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Пиво -->
+                <!--  //Джарылгач - Украинские Мальдивы -->
 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-lg-3 col-sm-6 mb-5">
