--- a/index.html
+++ b/index.html
@@ -433,12 +433,12 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!-- Пиво  -->
+                <!-- Джарылгач - Украинские Мальдивы  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Пиво</h4>
+                    <h4 class="destination mb-3">Джарылгач</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="https://novipovorot.pp.ua/images/beer-max.jpg" class="img-fluid" alt="Пиво">
+                        <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
+                            <img src="https://novipovorot.pp.ua/images/Dzharylgach/pop-Dzharylgach.jpg" class="img-fluid" alt="Пиво">
                         </a>
                         <div class="rating">
                             <ul>
@@ -452,12 +452,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Пиво</h4>
+                            <h4>Джарылгач</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Пиво  -->
+                <!-- //Джарылгач - Украинские Мальдивы  -->
                 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
