--- a/packages.html
+++ b/packages.html
@@ -518,7 +518,7 @@
                     <h4 class="destination mb-3">Джарылгач</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Dzharylgach.html">
-                            <img src="https://novipovorot.pp.ua/images/Dzharylgach/pop-Dzharylgach.jpg" class="img-fluid" alt="Пиво">
+                            <img src="images/Dzharylgach/pop-Dzharylgach.jpg" class="img-fluid" alt="Джарылгач - Украинские Мальдивы">
                         </a>
                         <div class="rating">
                             <ul>
