--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -186,7 +186,7 @@
                         
  			<!-- Alert success -->
 			<!--  Как купить дешевле -->
-		 	<div class="alert alert-info mt-3 ">
+		 	<div class="alert alert-success mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
                             <strong> Как купить дешевле</strong>
