--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -189,7 +189,7 @@
 		 	<div class="alert alert-success mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
-                            <span class="fa fa-money"></span><strong>Эконом</strong>
+                            <span class="fa fa-money"></span><strong>Купить дешевле</strong>
                             <br />
                             <br />
                             <span class="txt-alg-jf">
