--- a/page-Dzharylgach.html
+++ b/page-Dzharylgach.html
@@ -196,7 +196,7 @@
                                 Цена минус: <u>200 грн.</u> без прогулки к маякам,
 				проживание в упрощенном домике (улучшенный вариант палатки в полный рост) - <u>175 грн.</u>.
 				<br>
-				Вы можете купить тур за 2300 - 375  = 1925 грн ;). 
+				Вы можете купить тур за 2300 - 375  = 1925 грн. <img src="/images/Emoji/1f642.png" alt="" height="20px">
                             </span>
 			   
                             <hr>
