--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -133,8 +133,8 @@
                                             <thead class="thead-light">
                                               <tr>
                                                 <th>#</th>
-                                                <th>First Name</th>
-                                                <th>Last Name</th>
+                                                <th>Месяц</th>
+                                                <th>Дни</th>
                                               </tr>
                                             </thead>
                                             <tbody>
