--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -132,9 +132,8 @@
                                           <table class="table">
                                             <thead class="thead-light">
                                               <tr>
-                                                <th>#</th>
                                                 <th>Месяц</th>
-                                                <th>Дни</th>
+                                                <th colspan="4">Дни</th>
                                               </tr>
                                             </thead>
                                             <tbody>
