--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -129,7 +129,7 @@
                                           </button>
                                         </div>
                                         <div class="modal-body">
-                                          <table class="table">
+                                          <table class="table table-hover">
                                             <thead class="thead-light">
                                               <tr>
                                                 <th>Месяц</th>
