--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -133,7 +133,7 @@
                                             <thead class="thead-light">
                                               <tr>
                                                 <th>Месяц</th>
-                                                <th colspan="4">Дни</th>
+                                                <th colspan="4" class="text-center">Дни</th>
                                               </tr>
                                             </thead>
                                             <tbody>
