--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -323,7 +323,35 @@
                             </li>
                         </ul>
                         </p>
-                        
+			
+                        <!-- Расписание экскурсий -->
+	 
+			<ul class="list-group listing">
+                            <li class="list-group-item active"> Расписание экскурсий: </li>
+                            <li class="list-group-item">
+                               <span class="fa fa-calendar mr-2"></span> с 02.07 по 11.07.2021 </li>
+                            <li class="list-group-item">
+                               <span class="fa fa-calendar mr-2"></span> с 09.07 по 18.07.2021 </li>
+                            <li class="list-group-item">  <span
+                                    class="fa fa-calendar mr-2"></span> 23.07 по 01.08.2021 </li>
+                            <li class="list-group-item">  <span
+                                    class="fa fa-calendar mr-2"></span> с 30.07 по 08.08.2021</li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 06.08 по 15.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 13.08 по 22.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 20.08 по 29.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 27.08 по 05.09.2021 </li>
+                           <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 03.09 по 12.09.2021 </li>
+                           <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 10.09 по 19.09.2021 </li>
+                        </ul>
+			
+		       <!-- //Расписание экскурсий -->
+			
                        <!-- Описание экскурсии -->
 
                         <div class="accordion mt-3 mb-3" id="accordionExample">
