--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -173,9 +173,11 @@
                         </div>
                         
                         <h4 class="mb-3">
-			    ДЖАРЫЛГАЧ - УКРАИНСКИЕ МАЛЬДИВЫ. СОКРОВИЩА ОСТРОВОВ И МАЯКИ. <span id="OleshkovskyDesert">БЕСКРАЙНЯЯ ОЛЕШКОВСКАЯ ПУСТЫНЯ</span>. 
+			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов. Отдых в горах!
                         </h4>
-                        
+                        <h5 class="mb-3 bg-success text-white">
+			    Заезды с июля по сентябрь 2021 (каждую неделю)
+			</h5>
                        <p class="txt-alg-jf">
                             МЕГА ТУР! ВСЕГО 1 РАЗ В 2021 ГОДУ! <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
 			       <span id="ExcursionToZaporozhye">Экскурсия из Запорожье.</span>
