--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -178,15 +178,17 @@
                         <h5 class="mb-3 bg-success text-white">
 			    Заезды с июля по сентябрь 2021 (каждую неделю)
 			</h5>
-                       <p class="txt-alg-jf">
-                            МЕГА ТУР! ВСЕГО 1 РАЗ В 2021 ГОДУ! <img src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" alt="" height="20px">
-			       <span id="ExcursionToZaporozhye">Экскурсия из Запорожье.</span>
-                        </p>
                         <p class="txt-alg-jf">
-                           Самое потрясающее красивое место Украины - остров Джарылгач
-                          с белоснежным песком и <span id="beautifulBeaches">красивейшими пляжами</span>. 
-                          Первозданная чистота и красота острова, почувствуй себя Робинзоном.
-                          Морские путешествия с прогулками на катерах каждый день! Этот <span id="tourism">туризм</span> - отдых для тебя! 
+                           Красивейшие пейзажи Карпатских гор. 
+		           Cвежее дыхание вечнозеленого леса. 
+			   Чистота озер, самобытная культура края.
+			</p>
+			<p class="txt-alg-jf">
+		      Новые друзья, незабываемые впечатления, Экскурсии (Буковель, Яремче, Солотвино…) Восхождение на Говерлу, сбор грибов и ягод… Возможность отдохнуть от жары и суеты шумного города и зарядиться бодростью и здоровьем на весь год !
+       Наш летний тур на самый высокий горный курорт Драгобрат —  это легкие прогулки по живописным уголкам Карпат без рюкзаков, уютное жилье в горном отеле со всеми удобствами и потрясающими видами, домашняя кухня, интересные экскурсии, и поэтому подходит для всех любителей природы, невзирая на возраст и опыт походов… А дети ? Детей берем с собой !!!
+   Подробнее о поездках в 2021 году:
+Полных дней  в отеле на Драгобрате: 6 ночей / 6 дней, выезд из Запорожья и других городов поездом каждую пятницу  — возвращение домой по воскресеньям.
+Даты заездов (включая время на дорогу):
                         </p>
                          <div id="MoreDetails" style="display: none;">
                          <p class="p-2 bg-warning text-white txt-alg-jf">
