--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -175,9 +175,9 @@
                         <h4 class="mb-3">
 			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов. Отдых в горах!
                         </h4>
-                        <h5 class="mb-3 bg-success text-white">
+                        <p class="mb-3 bg-success text-white text-center">
 			    Заезды с июля по сентябрь 2021 (каждую неделю)
-			</h5>
+			</p>
                         <p class="txt-alg-jf">
                            Красивейшие пейзажи Карпатских гор. 
 		           Cвежее дыхание вечнозеленого леса. 
