--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -176,7 +176,7 @@
 			     Одолеть Говерлу. Искупаться в горном озере. Наесться до отвала ягод и грибов. Отдых в горах!
                         </h4>
                         <p class="mb-3 bg-success text-white text-center">
-			    Заезды с июля по сентябрь 2021 (каждую неделю)
+			    Заезды с июля по сентябрь 2021 (каждую неделю) <img src="/images/Emoji/1f600.png" alt="" height="20px">
 			</p>
                         <p class="txt-alg-jf">
                            Красивейшие пейзажи Карпатских гор. 
